- Added support for conditional dependency integration.
- Now using sgt as tool for binding generation.
- Added support for log level and verbosity specification on command line.
- Updated documentation.
- Added support for osg plug.
- Binding wx plug and removing hard dependency on module loading from memory. We will use software virtualisation eventually.
- Added support to build lunagen app.
- Prepared osg package.
- Rebuilt wx plug.
- Added wx pack.
- Added locale support and refactoring logger implementation. gui1 test still failing because of global profiler object missing.
- Added osgWX and gl modules.
- Added opengl module.
- Disabled profiler log file writing when profiler is disabled.
- Added updated control resource to executable for nicer wxWidgets design.
- Added enigmavbconsole tool for futur development.
- Implemented support for packages and options in enigma generator.
- Added iconv plugin. But this doesn't seem to work as expected for now. First working implementation of enigma mode.
- built and tested boxed app sgtgen for lunagen and enigma support.
- Added support to print version number and exit in sgt.
- Refactored the enigma scripts.
- Added initial ork import.
- Initial import of the ork library.
- Rebuild ork minimal example and test on shuttle.
- Added support for ork examples compilation and test.
- Renamed ork samples folder.
- Ignoring ork log file.
- Added support for ork tests.
- Adding proland sources.
- Built proland core with working sample.
- Rebuilt proland core demo with proper sub path.
- Adding proland terrain plugin.
- Built terrain1 example.
- Added the terrain samples 2 to 5.
- Added proland atmo plugin support.
- Added ocean support in proland.
- Built forest, graph and river plugins for proland.
- Built all proland examples.
- Tested proland examples.
- Added glut minimal test. Fixed mouse wheel usage. minor refactoring of assert methods.
- Preparing TODO list support.